Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/literals/T6891079.out
T6891079.java:8:14: compiler.err.invalid.binary.number
T6891079.java:9:15: compiler.err.invalid.binary.number
T6891079.java:10:14: compiler.err.invalid.hex.number
T6891079.java:11:15: compiler.err.invalid.hex.number
4 errors
